styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

body, html {
    height: 100%;
    margin: 0;
    display: grid;
    place-items: center; /* Centers both vertically and horizontally */
    background-color: hsl(0, 0%, 8%);
    font-family: Inter;
  }

.main {
    background-color: hsl(0, 0%, 12%) ;
    color: white;
    margin: auto;
    min-width: 400px;
    min-height:500px;
    border-radius: 10px;
    display: flex;
    justify-content: center; /* Centering items horizontally */
    align-items: center;    /* Centering items vertically */
    flex-direction: column;

}

img {
    border-radius: 100px;
    height: 25%;
    width: 25%;
    padding: 20px;
}


h1 {
font-size: 25px;
margin: 0px;
font-family:Inter;
}

h2 {
   color: hsl(75, 94%, 57%);
   font-size: 14px;
   margin: 0px;
   font-family: Inter;
}

.links-list {
    width: 100%;
    display:flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

p {
    color: hsl(0, 0%, 50%);
    font-size: 14px;
    font-family:Inter;
}

a {
    color:white;
    font-size: 14px;
    font-family: Inter;
    font-weight: 600;
    display:block;

    width: 75%;
    margin: 10px;
    padding: 10px;

    text-align: center;

    position:relative;
    right: 17px;
    text-decoration: none;

    border-radius: 10px;
    background-color: hsl(0, 0%, 20%);
}


.attribution {
    position:absolute;
    bottom: 0px;
}

.attribution a {
    padding: 0px;
    color:white;
    font-size: 12px;
    font-family: Inter;
    font-weight: 600;
    display:inline;

    width: auto;
    margin: auto;
    padding: auto;

    text-align: center;

    position:relative;
    right: 17px;
    text-decoration: none;

    border-radius: 10px;
    background-color: hsl(0, 0%, 8%)
}

